[gd_scene load_steps=7 format=3 uid="uid://bxa5nus5m4ntu"]

[ext_resource type="Script" path="res://menus/scripts/pause_menu.gd" id="1_amdy2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n88bl"]
bg_color = Color(0, 0, 0, 0.454902)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvtbe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dgmb"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.470588)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twysb"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.470588)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mae36"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.0768358, 0.0768358, 0.0768358, 0.470588)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[node name="Pause_menu" type="Control"]
process_mode = 3
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amdy2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n88bl")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.5
offset_top = 91.0
offset_right = 256.5
offset_bottom = 168.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "Gioco in pausa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons_cont" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -40.0
offset_right = 180.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Button_resume" type="Button" parent="Buttons_cont"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_lvtbe")
theme_override_styles/hover = SubResource("StyleBoxFlat_2dgmb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_twysb")
theme_override_styles/normal = SubResource("StyleBoxFlat_mae36")
text = "Resume"

[node name="Button_reset" type="Button" parent="Buttons_cont"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_lvtbe")
theme_override_styles/hover = SubResource("StyleBoxFlat_2dgmb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_twysb")
theme_override_styles/normal = SubResource("StyleBoxFlat_mae36")
text = "Reset Levelssss"

[node name="Button_options" type="Button" parent="Buttons_cont"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_lvtbe")
theme_override_styles/hover = SubResource("StyleBoxFlat_2dgmb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_twysb")
theme_override_styles/normal = SubResource("StyleBoxFlat_mae36")
text = "Options"

[node name="Button_exit" type="Button" parent="Buttons_cont"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_lvtbe")
theme_override_styles/hover = SubResource("StyleBoxFlat_2dgmb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_twysb")
theme_override_styles/normal = SubResource("StyleBoxFlat_mae36")
text = "Exit to main menu"

[connection signal="pressed" from="Buttons_cont/Button_resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Buttons_cont/Button_reset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="Buttons_cont/Button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="Buttons_cont/Button_exit" to="." method="_on_button_exit_pressed"]
